<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".InsertRoomTypesActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="18dp"
        android:text="@string/insert_demo"
        android:textSize="24sp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/et_Room_Types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room_types"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginBottom="18dp" />

    <EditText
        android:id="@+id/et_Room_Price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room_price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:layout_marginBottom="18dp" />


    <ImageView
        android:id="@+id/iv_selected_image"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/upload" />




    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select_image"
        android:backgroundTint="#03A9F4"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_insert_demo"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:text="@string/insert_demo"
        android:backgroundTint="#4CAF50"
        android:textColor="@color/white"
        android:layout_marginEnd="10dp" />






</LinearLayout>







