<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:layout_marginBottom="14dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginBottom="24dp"
        android:inputType="text"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="username" />


    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="24dp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints="Password" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >
        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ragisterr"
            android:padding="12dp"
            android:backgroundTint="#18736A"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:padding="12dp"
            android:backgroundTint="#13B0C8"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp" />


    </LinearLayout>



</LinearLayout>



